# serializer version: 1
# name: test_baccala_example2
  dict({
    'directed_transfer_function': array([[[[5.39259881e-01, 1.19232730e-02, 4.48816845e-01],
           [3.38128911e-01, 5.96520383e-01, 6.53507067e-02],
           [5.98204431e-07, 9.30398677e-02, 9.06959534e-01]],
  
          [[6.98522968e-01, 5.24802192e-02, 2.48996813e-01],
           [4.18223497e-01, 4.58911888e-01, 1.22864615e-01],
           [4.18793585e-02, 5.43110441e-02, 9.03809597e-01]],
  
          [[7.92725225e-01, 6.60631210e-03, 2.00668463e-01],
           [4.31757835e-01, 4.73760866e-01, 9.44812994e-02],
           [1.04165851e-01, 1.09171717e-01, 7.86662432e-01]],
  
          ...,
  
          [[8.23444960e-01, 1.36047635e-01, 4.05074057e-02],
           [2.66246501e-02, 2.84006032e-01, 6.89369318e-01],
           [2.41091397e-02, 4.10088842e-02, 9.34881976e-01]],
  
          [[8.49935944e-01, 9.82263110e-02, 5.18377452e-02],
           [1.99749233e-02, 3.36686666e-01, 6.43338411e-01],
           [3.99915263e-03, 2.46404960e-02, 9.71360351e-01]],
  
          [[9.43524639e-01, 1.97234027e-02, 3.67519586e-02],
           [5.86485198e-02, 3.09851884e-01, 6.31499596e-01],
           [8.90662648e-06, 4.50673151e-02, 9.54923778e-01]]]],
        shape=(1, 501, 3, 3)),
    'frequencies': array([  0. ,   0.2,   0.4,   0.6,   0.8,   1. ,   1.2,   1.4,   1.6,
           1.8,   2. ,   2.2,   2.4,   2.6,   2.8,   3. ,   3.2,   3.4,
           3.6,   3.8,   4. ,   4.2,   4.4,   4.6,   4.8,   5. ,   5.2,
           5.4,   5.6,   5.8,   6. ,   6.2,   6.4,   6.6,   6.8,   7. ,
           7.2,   7.4,   7.6,   7.8,   8. ,   8.2,   8.4,   8.6,   8.8,
           9. ,   9.2,   9.4,   9.6,   9.8,  10. ,  10.2,  10.4,  10.6,
          10.8,  11. ,  11.2,  11.4,  11.6,  11.8,  12. ,  12.2,  12.4,
          12.6,  12.8,  13. ,  13.2,  13.4,  13.6,  13.8,  14. ,  14.2,
          14.4,  14.6,  14.8,  15. ,  15.2,  15.4,  15.6,  15.8,  16. ,
          16.2,  16.4,  16.6,  16.8,  17. ,  17.2,  17.4,  17.6,  17.8,
          18. ,  18.2,  18.4,  18.6,  18.8,  19. ,  19.2,  19.4,  19.6,
          19.8,  20. ,  20.2,  20.4,  20.6,  20.8,  21. ,  21.2,  21.4,
          21.6,  21.8,  22. ,  22.2,  22.4,  22.6,  22.8,  23. ,  23.2,
          23.4,  23.6,  23.8,  24. ,  24.2,  24.4,  24.6,  24.8,  25. ,
          25.2,  25.4,  25.6,  25.8,  26. ,  26.2,  26.4,  26.6,  26.8,
          27. ,  27.2,  27.4,  27.6,  27.8,  28. ,  28.2,  28.4,  28.6,
          28.8,  29. ,  29.2,  29.4,  29.6,  29.8,  30. ,  30.2,  30.4,
          30.6,  30.8,  31. ,  31.2,  31.4,  31.6,  31.8,  32. ,  32.2,
          32.4,  32.6,  32.8,  33. ,  33.2,  33.4,  33.6,  33.8,  34. ,
          34.2,  34.4,  34.6,  34.8,  35. ,  35.2,  35.4,  35.6,  35.8,
          36. ,  36.2,  36.4,  36.6,  36.8,  37. ,  37.2,  37.4,  37.6,
          37.8,  38. ,  38.2,  38.4,  38.6,  38.8,  39. ,  39.2,  39.4,
          39.6,  39.8,  40. ,  40.2,  40.4,  40.6,  40.8,  41. ,  41.2,
          41.4,  41.6,  41.8,  42. ,  42.2,  42.4,  42.6,  42.8,  43. ,
          43.2,  43.4,  43.6,  43.8,  44. ,  44.2,  44.4,  44.6,  44.8,
          45. ,  45.2,  45.4,  45.6,  45.8,  46. ,  46.2,  46.4,  46.6,
          46.8,  47. ,  47.2,  47.4,  47.6,  47.8,  48. ,  48.2,  48.4,
          48.6,  48.8,  49. ,  49.2,  49.4,  49.6,  49.8,  50. ,  50.2,
          50.4,  50.6,  50.8,  51. ,  51.2,  51.4,  51.6,  51.8,  52. ,
          52.2,  52.4,  52.6,  52.8,  53. ,  53.2,  53.4,  53.6,  53.8,
          54. ,  54.2,  54.4,  54.6,  54.8,  55. ,  55.2,  55.4,  55.6,
          55.8,  56. ,  56.2,  56.4,  56.6,  56.8,  57. ,  57.2,  57.4,
          57.6,  57.8,  58. ,  58.2,  58.4,  58.6,  58.8,  59. ,  59.2,
          59.4,  59.6,  59.8,  60. ,  60.2,  60.4,  60.6,  60.8,  61. ,
          61.2,  61.4,  61.6,  61.8,  62. ,  62.2,  62.4,  62.6,  62.8,
          63. ,  63.2,  63.4,  63.6,  63.8,  64. ,  64.2,  64.4,  64.6,
          64.8,  65. ,  65.2,  65.4,  65.6,  65.8,  66. ,  66.2,  66.4,
          66.6,  66.8,  67. ,  67.2,  67.4,  67.6,  67.8,  68. ,  68.2,
          68.4,  68.6,  68.8,  69. ,  69.2,  69.4,  69.6,  69.8,  70. ,
          70.2,  70.4,  70.6,  70.8,  71. ,  71.2,  71.4,  71.6,  71.8,
          72. ,  72.2,  72.4,  72.6,  72.8,  73. ,  73.2,  73.4,  73.6,
          73.8,  74. ,  74.2,  74.4,  74.6,  74.8,  75. ,  75.2,  75.4,
          75.6,  75.8,  76. ,  76.2,  76.4,  76.6,  76.8,  77. ,  77.2,
          77.4,  77.6,  77.8,  78. ,  78.2,  78.4,  78.6,  78.8,  79. ,
          79.2,  79.4,  79.6,  79.8,  80. ,  80.2,  80.4,  80.6,  80.8,
          81. ,  81.2,  81.4,  81.6,  81.8,  82. ,  82.2,  82.4,  82.6,
          82.8,  83. ,  83.2,  83.4,  83.6,  83.8,  84. ,  84.2,  84.4,
          84.6,  84.8,  85. ,  85.2,  85.4,  85.6,  85.8,  86. ,  86.2,
          86.4,  86.6,  86.8,  87. ,  87.2,  87.4,  87.6,  87.8,  88. ,
          88.2,  88.4,  88.6,  88.8,  89. ,  89.2,  89.4,  89.6,  89.8,
          90. ,  90.2,  90.4,  90.6,  90.8,  91. ,  91.2,  91.4,  91.6,
          91.8,  92. ,  92.2,  92.4,  92.6,  92.8,  93. ,  93.2,  93.4,
          93.6,  93.8,  94. ,  94.2,  94.4,  94.6,  94.8,  95. ,  95.2,
          95.4,  95.6,  95.8,  96. ,  96.2,  96.4,  96.6,  96.8,  97. ,
          97.2,  97.4,  97.6,  97.8,  98. ,  98.2,  98.4,  98.6,  98.8,
          99. ,  99.2,  99.4,  99.6,  99.8, 100. ]),
    'pairwise_spectral_granger': array([[[[           nan, 9.72002432e-02, 7.19460408e-01],
           [6.36321202e-01,            nan, 9.57186359e-02],
           [3.20166055e-03, 8.98599114e-02,            nan]],
  
          [[           nan, 6.52907148e-02, 2.55135769e-01],
           [6.46268362e-01,            nan, 1.15670731e-01],
           [5.78411685e-02, 1.03144898e-01,            nan]],
  
          [[           nan, 1.17158954e-02, 2.83051449e-01],
           [6.83830430e-01,            nan, 1.06582050e-01],
           [8.41170364e-02, 2.37294282e-01,            nan]],
  
          ...,
  
          [[           nan, 1.42993484e-01, 4.45638567e-02],
           [4.76805928e-02,            nan, 1.13072841e+00],
           [1.66426754e-02, 5.22802053e-02,            nan]],
  
          [[           nan, 9.83809344e-02, 4.92022304e-02],
           [3.08062233e-02,            nan, 1.04475234e+00],
           [5.57470216e-04, 2.08279681e-02,            nan]],
  
          [[           nan, 5.27680227e-02, 2.44507707e-02],
           [7.89070533e-02,            nan, 9.84523794e-01],
           [7.05099766e-04, 4.04185440e-02,            nan]]]],
        shape=(1, 501, 3, 3)),
    'partial_directed_coherence': array([[[[0.66185457, 0.14971523, 0.2468747 ],
           [0.30647151, 0.77133459, 0.34334911],
           [0.03167392, 0.07895018, 0.40977619]],
  
          [[0.53221474, 0.15218379, 0.09167433],
           [0.46206278, 0.7648223 , 0.37519967],
           [0.00572248, 0.08299392, 0.533126  ]],
  
          [[0.52304349, 0.08314536, 0.09530122],
           [0.47402574, 0.7380904 , 0.38150378],
           [0.00293077, 0.17876424, 0.523195  ]],
  
          ...,
  
          [[0.8901947 , 0.10671662, 0.16957036],
           [0.10103933, 0.84420515, 0.53057409],
           [0.00876597, 0.04907823, 0.29985555]],
  
          [[0.97728893, 0.08661667, 0.14231776],
           [0.0157555 , 0.89584468, 0.51489456],
           [0.00695557, 0.01753865, 0.34278768]],
  
          [[0.89797259, 0.00979432, 0.0527079 ],
           [0.0970472 , 0.94570123, 0.58203647],
           [0.0049802 , 0.04450444, 0.36525564]]]], shape=(1, 501, 3, 3)),
  })
# ---
# name: test_coherence_magnitude_phase_offset
  dict({
    'coherence_magnitude': array([[[[       nan, 0.37403961],
           [0.37403961,        nan]],
  
          [[       nan, 0.34048315],
           [0.34048315,        nan]],
  
          [[       nan, 0.05097692],
           [0.05097692,        nan]],
  
          ...,
  
          [[       nan, 0.22702311],
           [0.22702311,        nan]],
  
          [[       nan, 0.21575818],
           [0.21575818,        nan]],
  
          [[       nan, 0.20174615],
           [0.20174615,        nan]]]], shape=(1, 37633, 2, 2)),
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
  })
# ---
# name: test_coherence_no_trials
  dict({
    'coherence_magnitude': array([[[[       nan, 0.37403961],
           [0.37403961,        nan]],
  
          [[       nan, 0.34048315],
           [0.34048315,        nan]],
  
          [[       nan, 0.05097692],
           [0.05097692,        nan]],
  
          ...,
  
          [[       nan, 0.22702311],
           [0.22702311,        nan]],
  
          [[       nan, 0.21575818],
           [0.21575818,        nan]],
  
          [[       nan, 0.20174615],
           [0.20174615,        nan]]]], shape=(1, 37633, 2, 2)),
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
  })
# ---
# name: test_coherence_with_trials
  dict({
    'coherence_magnitude': array([[[[       nan, 0.0023166 ],
           [0.0023166 ,        nan]],
  
          [[       nan, 0.00414825],
           [0.00414825,        nan]],
  
          [[       nan, 0.01443339],
           [0.01443339,        nan]],
  
          ...,
  
          [[       nan, 0.00259543],
           [0.00259543,        nan]],
  
          [[       nan, 0.02608476],
           [0.02608476,        nan]],
  
          [[       nan, 0.05187077],
           [0.05187077,        nan]]]], shape=(1, 1816, 2, 2)),
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
  })
# ---
# name: test_coherogram_phase_change
  dict({
    'coherence_magnitude': array([[[[       nan, 0.00871938],
           [0.00871938,        nan]],
  
          [[       nan, 0.00085432],
           [0.00085432,        nan]],
  
          [[       nan, 0.00916243],
           [0.00916243,        nan]],
  
          ...,
  
          [[       nan, 0.00048988],
           [0.00048988,        nan]],
  
          [[       nan, 0.02613658],
           [0.02613658,        nan]],
  
          [[       nan, 0.02332249],
           [0.02332249,        nan]]],
  
  
         [[[       nan, 0.01262223],
           [0.01262223,        nan]],
  
          [[       nan, 0.01017312],
           [0.01017312,        nan]],
  
          [[       nan, 0.00288967],
           [0.00288967,        nan]],
  
          ...,
  
          [[       nan, 0.00540219],
           [0.00540219,        nan]],
  
          [[       nan, 0.01272164],
           [0.01272164,        nan]],
  
          [[       nan, 0.01407683],
           [0.01407683,        nan]]],
  
  
         [[[       nan, 0.03473611],
           [0.03473611,        nan]],
  
          [[       nan, 0.03313079],
           [0.03313079,        nan]],
  
          [[       nan, 0.01158078],
           [0.01158078,        nan]],
  
          ...,
  
          [[       nan, 0.02588316],
           [0.02588316,        nan]],
  
          [[       nan, 0.00299187],
           [0.00299187,        nan]],
  
          [[       nan, 0.00272657],
           [0.00272657,        nan]]],
  
  
         ...,
  
  
         [[[       nan, 0.00540536],
           [0.00540536,        nan]],
  
          [[       nan, 0.00233096],
           [0.00233096,        nan]],
  
          [[       nan, 0.00591113],
           [0.00591113,        nan]],
  
          ...,
  
          [[       nan, 0.00142019],
           [0.00142019,        nan]],
  
          [[       nan, 0.00284069],
           [0.00284069,        nan]],
  
          [[       nan, 0.00763376],
           [0.00763376,        nan]]],
  
  
         [[[       nan, 0.04215135],
           [0.04215135,        nan]],
  
          [[       nan, 0.01468503],
           [0.01468503,        nan]],
  
          [[       nan, 0.00050359],
           [0.00050359,        nan]],
  
          ...,
  
          [[       nan, 0.01008407],
           [0.01008407,        nan]],
  
          [[       nan, 0.0049844 ],
           [0.0049844 ,        nan]],
  
          [[       nan, 0.0013327 ],
           [0.0013327 ,        nan]]],
  
  
         [[[       nan, 0.0008855 ],
           [0.0008855 ,        nan]],
  
          [[       nan, 0.00572318],
           [0.00572318,        nan]],
  
          [[       nan, 0.0101964 ],
           [0.0101964 ,        nan]],
  
          ...,
  
          [[       nan, 0.00757687],
           [0.00757687,        nan]],
  
          [[       nan, 0.03503919],
           [0.03503919,        nan]],
  
          [[       nan, 0.02747289],
           [0.02747289,        nan]]]], shape=(30, 61, 2, 2)),
    'time': array([0.  , 0.08, 0.16, 0.24, 0.32, 0.4 , 0.48, 0.56, 0.64, 0.72, 0.8 ,
         0.88, 0.96, 1.04, 1.12, 1.2 , 1.28, 1.36, 1.44, 1.52, 1.6 , 1.68,
         1.76, 1.84, 1.92, 2.  , 2.08, 2.16, 2.24, 2.32]),
  })
# ---
# name: test_debiased_squared_weighted_phase_lag_index
  dict({
    'debiased_squared_wpli': array([[[[        nan,         nan],
           [        nan,         nan]],
  
          [[        nan, -0.00525606],
           [-0.00525606,         nan]],
  
          [[        nan,  0.01282786],
           [ 0.01282786,         nan]],
  
          ...,
  
          [[        nan, -0.01356274],
           [-0.01356274,         nan]],
  
          [[        nan, -0.00731352],
           [-0.00731352,         nan]],
  
          [[        nan,         nan],
           [        nan,         nan]]]], shape=(1, 1816, 2, 2)),
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
  })
# ---
# name: test_ding_example1
  dict({
    'direct_directed_transfer_function': array([[[[5.26768602e-02, 5.79270739e-04],
           [7.73932912e-02, 4.67226289e-02]],
  
          [[4.90999270e-02, 4.92861782e-04],
           [7.60161076e-02, 4.39819537e-02]],
  
          [[5.37803088e-02, 6.30274267e-04],
           [9.27504976e-02, 4.84876658e-02]],
  
          ...,
  
          [[1.44963043e-02, 4.66725130e-07],
           [9.56847304e-04, 1.84285596e-02]],
  
          [[1.48657213e-02, 2.88845747e-05],
           [1.04296812e-03, 1.77479162e-02]],
  
          [[1.39848449e-02, 7.50496485e-05],
           [1.26599638e-03, 1.66165162e-02]]]], shape=(1, 501, 2, 2)),
    'directed_transfer_function': array([[[[9.94833988e-01, 5.16601225e-03],
           [7.78161547e-01, 2.21838453e-01]],
  
          [[9.95411400e-01, 4.58859977e-03],
           [7.90072587e-01, 2.09927413e-01]],
  
          [[9.94995977e-01, 5.00402278e-03],
           [8.16766590e-01, 1.83233410e-01]],
  
          ...,
  
          [[9.99968629e-01, 3.13706707e-05],
           [5.05907550e-02, 9.49409245e-01]],
  
          [[9.98114948e-01, 1.88505199e-03],
           [5.70120958e-02, 9.42987904e-01]],
  
          [[9.94846865e-01, 5.15313519e-03],
           [7.31598859e-02, 9.26840114e-01]]]], shape=(1, 501, 2, 2)),
    'frequencies': array([  0. ,   0.2,   0.4,   0.6,   0.8,   1. ,   1.2,   1.4,   1.6,
           1.8,   2. ,   2.2,   2.4,   2.6,   2.8,   3. ,   3.2,   3.4,
           3.6,   3.8,   4. ,   4.2,   4.4,   4.6,   4.8,   5. ,   5.2,
           5.4,   5.6,   5.8,   6. ,   6.2,   6.4,   6.6,   6.8,   7. ,
           7.2,   7.4,   7.6,   7.8,   8. ,   8.2,   8.4,   8.6,   8.8,
           9. ,   9.2,   9.4,   9.6,   9.8,  10. ,  10.2,  10.4,  10.6,
          10.8,  11. ,  11.2,  11.4,  11.6,  11.8,  12. ,  12.2,  12.4,
          12.6,  12.8,  13. ,  13.2,  13.4,  13.6,  13.8,  14. ,  14.2,
          14.4,  14.6,  14.8,  15. ,  15.2,  15.4,  15.6,  15.8,  16. ,
          16.2,  16.4,  16.6,  16.8,  17. ,  17.2,  17.4,  17.6,  17.8,
          18. ,  18.2,  18.4,  18.6,  18.8,  19. ,  19.2,  19.4,  19.6,
          19.8,  20. ,  20.2,  20.4,  20.6,  20.8,  21. ,  21.2,  21.4,
          21.6,  21.8,  22. ,  22.2,  22.4,  22.6,  22.8,  23. ,  23.2,
          23.4,  23.6,  23.8,  24. ,  24.2,  24.4,  24.6,  24.8,  25. ,
          25.2,  25.4,  25.6,  25.8,  26. ,  26.2,  26.4,  26.6,  26.8,
          27. ,  27.2,  27.4,  27.6,  27.8,  28. ,  28.2,  28.4,  28.6,
          28.8,  29. ,  29.2,  29.4,  29.6,  29.8,  30. ,  30.2,  30.4,
          30.6,  30.8,  31. ,  31.2,  31.4,  31.6,  31.8,  32. ,  32.2,
          32.4,  32.6,  32.8,  33. ,  33.2,  33.4,  33.6,  33.8,  34. ,
          34.2,  34.4,  34.6,  34.8,  35. ,  35.2,  35.4,  35.6,  35.8,
          36. ,  36.2,  36.4,  36.6,  36.8,  37. ,  37.2,  37.4,  37.6,
          37.8,  38. ,  38.2,  38.4,  38.6,  38.8,  39. ,  39.2,  39.4,
          39.6,  39.8,  40. ,  40.2,  40.4,  40.6,  40.8,  41. ,  41.2,
          41.4,  41.6,  41.8,  42. ,  42.2,  42.4,  42.6,  42.8,  43. ,
          43.2,  43.4,  43.6,  43.8,  44. ,  44.2,  44.4,  44.6,  44.8,
          45. ,  45.2,  45.4,  45.6,  45.8,  46. ,  46.2,  46.4,  46.6,
          46.8,  47. ,  47.2,  47.4,  47.6,  47.8,  48. ,  48.2,  48.4,
          48.6,  48.8,  49. ,  49.2,  49.4,  49.6,  49.8,  50. ,  50.2,
          50.4,  50.6,  50.8,  51. ,  51.2,  51.4,  51.6,  51.8,  52. ,
          52.2,  52.4,  52.6,  52.8,  53. ,  53.2,  53.4,  53.6,  53.8,
          54. ,  54.2,  54.4,  54.6,  54.8,  55. ,  55.2,  55.4,  55.6,
          55.8,  56. ,  56.2,  56.4,  56.6,  56.8,  57. ,  57.2,  57.4,
          57.6,  57.8,  58. ,  58.2,  58.4,  58.6,  58.8,  59. ,  59.2,
          59.4,  59.6,  59.8,  60. ,  60.2,  60.4,  60.6,  60.8,  61. ,
          61.2,  61.4,  61.6,  61.8,  62. ,  62.2,  62.4,  62.6,  62.8,
          63. ,  63.2,  63.4,  63.6,  63.8,  64. ,  64.2,  64.4,  64.6,
          64.8,  65. ,  65.2,  65.4,  65.6,  65.8,  66. ,  66.2,  66.4,
          66.6,  66.8,  67. ,  67.2,  67.4,  67.6,  67.8,  68. ,  68.2,
          68.4,  68.6,  68.8,  69. ,  69.2,  69.4,  69.6,  69.8,  70. ,
          70.2,  70.4,  70.6,  70.8,  71. ,  71.2,  71.4,  71.6,  71.8,
          72. ,  72.2,  72.4,  72.6,  72.8,  73. ,  73.2,  73.4,  73.6,
          73.8,  74. ,  74.2,  74.4,  74.6,  74.8,  75. ,  75.2,  75.4,
          75.6,  75.8,  76. ,  76.2,  76.4,  76.6,  76.8,  77. ,  77.2,
          77.4,  77.6,  77.8,  78. ,  78.2,  78.4,  78.6,  78.8,  79. ,
          79.2,  79.4,  79.6,  79.8,  80. ,  80.2,  80.4,  80.6,  80.8,
          81. ,  81.2,  81.4,  81.6,  81.8,  82. ,  82.2,  82.4,  82.6,
          82.8,  83. ,  83.2,  83.4,  83.6,  83.8,  84. ,  84.2,  84.4,
          84.6,  84.8,  85. ,  85.2,  85.4,  85.6,  85.8,  86. ,  86.2,
          86.4,  86.6,  86.8,  87. ,  87.2,  87.4,  87.6,  87.8,  88. ,
          88.2,  88.4,  88.6,  88.8,  89. ,  89.2,  89.4,  89.6,  89.8,
          90. ,  90.2,  90.4,  90.6,  90.8,  91. ,  91.2,  91.4,  91.6,
          91.8,  92. ,  92.2,  92.4,  92.6,  92.8,  93. ,  93.2,  93.4,
          93.6,  93.8,  94. ,  94.2,  94.4,  94.6,  94.8,  95. ,  95.2,
          95.4,  95.6,  95.8,  96. ,  96.2,  96.4,  96.6,  96.8,  97. ,
          97.2,  97.4,  97.6,  97.8,  98. ,  98.2,  98.4,  98.6,  98.8,
          99. ,  99.2,  99.4,  99.6,  99.8, 100. ]),
  })
# ---
# name: test_global_coherence
  dict({
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
    'global_coherence': tuple(
      array([[[0.02429873],
          [0.02464317],
          [0.0210556 ],
          ...,
          [0.02279514],
          [0.0210556 ],
          [0.02464317]]], shape=(1, 75264, 1)),
      array([[[[-0.29708287+0.j        ],
           [ 0.87951368+0.j        ],
           [-0.10959653+0.j        ],
           [-0.35182447+0.j        ],
           [ 0.04904693+0.j        ]],
  
          [[-0.28090455+0.09833911j],
           [ 0.77119652-0.20451414j],
           [ 0.03162331+0.10418788j],
           [-0.49953085+0.08519505j],
           [ 0.06657412+0.04213571j]],
  
          [[-0.04385024-0.33688287j],
           [ 0.10534481+0.64312291j],
           [-0.22422121+0.05996057j],
           [ 0.20459119-0.56712319j],
           [-0.20618711+0.00356026j]],
  
          ...,
  
          [[-0.11856546+0.37086354j],
           [-0.21956729-0.60035093j],
           [-0.25741633+0.06079048j],
           [ 0.46302316+0.24550825j],
           [-0.24831141+0.18300133j]],
  
          [[-0.25540271-0.22401422j],
           [ 0.47552782+0.4456208j ],
           [ 0.17466066-0.15285312j],
           [-0.58498745-0.14586278j],
           [ 0.11777143-0.16927991j]],
  
          [[-0.28248863-0.09369162j],
           [ 0.77446546+0.19176381j],
           [ 0.0299002 -0.1046954j ],
           [-0.50086834-0.07694265j],
           [ 0.06586995-0.04322825j]]]], shape=(1, 75264, 5, 1)),
    ),
  })
# ---
# name: test_group_delay_signal1_leads
  dict({
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
    'group_delay': tuple(
      array([[[nan, nan],
          [nan, nan]]]),
      array([[[nan, nan],
          [nan, nan]]]),
      array([[[ 1., nan],
          [nan,  1.]]]),
    ),
  })
# ---
# name: test_group_delay_signal2_leads
  dict({
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
    'group_delay': tuple(
      array([[[nan, nan],
          [nan, nan]]]),
      array([[[nan, nan],
          [nan, nan]]]),
      array([[[ 1., nan],
          [nan,  1.]]]),
    ),
  })
# ---
# name: test_group_delay_signal2_leads_over_time
  dict({
    'frequencies': array([  0. ,  12.5,  25. ,  37.5,  50. ,  62.5,  75. ,  87.5, 100. ,
         112.5, 125. , 137.5, 150. , 162.5, 175. , 187.5, 200. , 212.5,
         225. , 237.5, 250. , 262.5, 275. , 287.5, 300. , 312.5, 325. ,
         337.5, 350. , 362.5, 375. , 387.5, 400. , 412.5, 425. , 437.5,
         450. , 462.5, 475. , 487.5, 500. , 512.5, 525. , 537.5, 550. ,
         562.5, 575. , 587.5, 600. , 612.5, 625. , 637.5, 650. , 662.5,
         675. , 687.5, 700. , 712.5, 725. , 737.5, 750. ]),
    'group_delay': tuple(
      array([[[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]]]),
      array([[[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]],
  
         [[nan, nan],
          [nan, nan]]]),
      array([[[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]],
  
         [[ 1., nan],
          [nan,  1.]]]),
    ),
    'time': array([0.  , 0.08, 0.16, 0.24, 0.32, 0.4 , 0.48, 0.56, 0.64, 0.72, 0.8 ,
         0.88, 0.96, 1.04, 1.12, 1.2 , 1.28, 1.36, 1.44, 1.52, 1.6 , 1.68,
         1.76, 1.84, 1.92, 2.  , 2.08, 2.16, 2.24, 2.32]),
  })
# ---
# name: test_imaginary_coherence
  dict({
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
    'imaginary_coherence': array([[[[0.00000000e+00, 0.00000000e+00],
           [0.00000000e+00, 0.00000000e+00]],
  
          [[4.21602148e-18, 6.42001209e-02],
           [6.42001209e-02, 2.43479868e-19]],
  
          [[1.89014874e-18, 9.41355075e-02],
           [9.41355075e-02, 4.75046549e-19]],
  
          ...,
  
          [[3.81381164e-19, 4.58291295e-02],
           [4.58291295e-02, 1.19253079e-18]],
  
          [[1.48600393e-18, 5.89348914e-02],
           [5.89348914e-02, 8.23134998e-19]],
  
          [[0.00000000e+00, 0.00000000e+00],
           [0.00000000e+00, 0.00000000e+00]]]], shape=(1, 1816, 2, 2)),
  })
# ---
# name: test_pairwise_phase_consistency
  dict({
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
    'pairwise_phase_consistency': array([[[[ 1.        , -0.00969697],
           [-0.00969697,  1.        ]],
  
          [[ 1.        ,  0.00240399],
           [ 0.00240399,  1.        ]],
  
          [[ 1.        , -0.00287662],
           [-0.00287662,  1.        ]],
  
          ...,
  
          [[ 1.        ,  0.00248752],
           [ 0.00248752,  1.        ]],
  
          [[ 1.        ,  0.00577838],
           [ 0.00577838,  1.        ]],
  
          [[ 1.        ,  0.02262626],
           [ 0.02262626,  1.        ]]]], shape=(1, 1816, 2, 2)),
  })
# ---
# name: test_phase_lag_index
  dict({
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
    'phase_lag_index': array([[[[ 0.  ,  0.  ],
           [ 0.  ,  0.  ]],
  
          [[ 0.  ,  0.08],
           [-0.08,  0.  ]],
  
          [[ 0.  , -0.04],
           [ 0.04,  0.  ]],
  
          ...,
  
          [[ 0.  ,  0.14],
           [-0.14,  0.  ]],
  
          [[ 0.  , -0.16],
           [ 0.16,  0.  ]],
  
          [[ 0.  ,  0.  ],
           [ 0.  ,  0.  ]]]], shape=(1, 1816, 2, 2)),
  })
# ---
# name: test_phase_locking_value
  dict({
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
    'phase_locking_value': array([[[[1.        , 0.02      ],
           [0.02      , 1.        ]],
  
          [[1.        , 0.11126521],
           [0.11126521, 1.        ]],
  
          [[1.        , 0.08457039],
           [0.08457039, 1.        ]],
  
          ...,
  
          [[1.        , 0.11163622],
           [0.11163622, 1.        ]],
  
          [[1.        , 0.1253818 ],
           [0.1253818 , 1.        ]],
  
          [[1.        , 0.18      ],
           [0.18      , 1.        ]]]], shape=(1, 1816, 2, 2)),
  })
# ---
# name: test_power_spectrum_200hz
  dict({
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
    'power': array([[[0.00417877],
          [0.00857604],
          [0.00942787],
          ...,
          [0.00736976],
          [0.00661801],
          [0.00573762]]], shape=(1, 37633, 1)),
  })
# ---
# name: test_power_spectrum_30hz
  dict({
    'frequencies': array([0.00000000e+00, 1.99298469e-02, 3.98596939e-02, ...,
         7.49960140e+02, 7.49980070e+02, 7.50000000e+02], shape=(37633,)),
    'power': array([[[0.00418304],
          [0.00856069],
          [0.00943135],
          ...,
          [0.00736996],
          [0.0066178 ],
          [0.00573764]]], shape=(1, 37633, 1)),
  })
# ---
# name: test_spectrogram_decreased_frequency_resolution
  dict({
    'frequencies': array([  0.        ,   1.66666667,   3.33333333,   5.        ,
           6.66666667,   8.33333333,  10.        ,  11.66666667,
          13.33333333,  15.        ,  16.66666667,  18.33333333,
          20.        ,  21.66666667,  23.33333333,  25.        ,
          26.66666667,  28.33333333,  30.        ,  31.66666667,
          33.33333333,  35.        ,  36.66666667,  38.33333333,
          40.        ,  41.66666667,  43.33333333,  45.        ,
          46.66666667,  48.33333333,  50.        ,  51.66666667,
          53.33333333,  55.        ,  56.66666667,  58.33333333,
          60.        ,  61.66666667,  63.33333333,  65.        ,
          66.66666667,  68.33333333,  70.        ,  71.66666667,
          73.33333333,  75.        ,  76.66666667,  78.33333333,
          80.        ,  81.66666667,  83.33333333,  85.        ,
          86.66666667,  88.33333333,  90.        ,  91.66666667,
          93.33333333,  95.        ,  96.66666667,  98.33333333,
         100.        , 101.66666667, 103.33333333, 105.        ,
         106.66666667, 108.33333333, 110.        , 111.66666667,
         113.33333333, 115.        , 116.66666667, 118.33333333,
         120.        , 121.66666667, 123.33333333, 125.        ,
         126.66666667, 128.33333333, 130.        , 131.66666667,
         133.33333333, 135.        , 136.66666667, 138.33333333,
         140.        , 141.66666667, 143.33333333, 145.        ,
         146.66666667, 148.33333333, 150.        , 151.66666667,
         153.33333333, 155.        , 156.66666667, 158.33333333,
         160.        , 161.66666667, 163.33333333, 165.        ,
         166.66666667, 168.33333333, 170.        , 171.66666667,
         173.33333333, 175.        , 176.66666667, 178.33333333,
         180.        , 181.66666667, 183.33333333, 185.        ,
         186.66666667, 188.33333333, 190.        , 191.66666667,
         193.33333333, 195.        , 196.66666667, 198.33333333,
         200.        , 201.66666667, 203.33333333, 205.        ,
         206.66666667, 208.33333333, 210.        , 211.66666667,
         213.33333333, 215.        , 216.66666667, 218.33333333,
         220.        , 221.66666667, 223.33333333, 225.        ,
         226.66666667, 228.33333333, 230.        , 231.66666667,
         233.33333333, 235.        , 236.66666667, 238.33333333,
         240.        , 241.66666667, 243.33333333, 245.        ,
         246.66666667, 248.33333333, 250.        , 251.66666667,
         253.33333333, 255.        , 256.66666667, 258.33333333,
         260.        , 261.66666667, 263.33333333, 265.        ,
         266.66666667, 268.33333333, 270.        , 271.66666667,
         273.33333333, 275.        , 276.66666667, 278.33333333,
         280.        , 281.66666667, 283.33333333, 285.        ,
         286.66666667, 288.33333333, 290.        , 291.66666667,
         293.33333333, 295.        , 296.66666667, 298.33333333,
         300.        , 301.66666667, 303.33333333, 305.        ,
         306.66666667, 308.33333333, 310.        , 311.66666667,
         313.33333333, 315.        , 316.66666667, 318.33333333,
         320.        , 321.66666667, 323.33333333, 325.        ,
         326.66666667, 328.33333333, 330.        , 331.66666667,
         333.33333333, 335.        , 336.66666667, 338.33333333,
         340.        , 341.66666667, 343.33333333, 345.        ,
         346.66666667, 348.33333333, 350.        , 351.66666667,
         353.33333333, 355.        , 356.66666667, 358.33333333,
         360.        , 361.66666667, 363.33333333, 365.        ,
         366.66666667, 368.33333333, 370.        , 371.66666667,
         373.33333333, 375.        , 376.66666667, 378.33333333,
         380.        , 381.66666667, 383.33333333, 385.        ,
         386.66666667, 388.33333333, 390.        , 391.66666667,
         393.33333333, 395.        , 396.66666667, 398.33333333,
         400.        , 401.66666667, 403.33333333, 405.        ,
         406.66666667, 408.33333333, 410.        , 411.66666667,
         413.33333333, 415.        , 416.66666667, 418.33333333,
         420.        , 421.66666667, 423.33333333, 425.        ,
         426.66666667, 428.33333333, 430.        , 431.66666667,
         433.33333333, 435.        , 436.66666667, 438.33333333,
         440.        , 441.66666667, 443.33333333, 445.        ,
         446.66666667, 448.33333333, 450.        , 451.66666667,
         453.33333333, 455.        , 456.66666667, 458.33333333,
         460.        , 461.66666667, 463.33333333, 465.        ,
         466.66666667, 468.33333333, 470.        , 471.66666667,
         473.33333333, 475.        , 476.66666667, 478.33333333,
         480.        , 481.66666667, 483.33333333, 485.        ,
         486.66666667, 488.33333333, 490.        , 491.66666667,
         493.33333333, 495.        , 496.66666667, 498.33333333,
         500.        , 501.66666667, 503.33333333, 505.        ,
         506.66666667, 508.33333333, 510.        , 511.66666667,
         513.33333333, 515.        , 516.66666667, 518.33333333,
         520.        , 521.66666667, 523.33333333, 525.        ,
         526.66666667, 528.33333333, 530.        , 531.66666667,
         533.33333333, 535.        , 536.66666667, 538.33333333,
         540.        , 541.66666667, 543.33333333, 545.        ,
         546.66666667, 548.33333333, 550.        , 551.66666667,
         553.33333333, 555.        , 556.66666667, 558.33333333,
         560.        , 561.66666667, 563.33333333, 565.        ,
         566.66666667, 568.33333333, 570.        , 571.66666667,
         573.33333333, 575.        , 576.66666667, 578.33333333,
         580.        , 581.66666667, 583.33333333, 585.        ,
         586.66666667, 588.33333333, 590.        , 591.66666667,
         593.33333333, 595.        , 596.66666667, 598.33333333,
         600.        , 601.66666667, 603.33333333, 605.        ,
         606.66666667, 608.33333333, 610.        , 611.66666667,
         613.33333333, 615.        , 616.66666667, 618.33333333,
         620.        , 621.66666667, 623.33333333, 625.        ,
         626.66666667, 628.33333333, 630.        , 631.66666667,
         633.33333333, 635.        , 636.66666667, 638.33333333,
         640.        , 641.66666667, 643.33333333, 645.        ,
         646.66666667, 648.33333333, 650.        , 651.66666667,
         653.33333333, 655.        , 656.66666667, 658.33333333,
         660.        , 661.66666667, 663.33333333, 665.        ,
         666.66666667, 668.33333333, 670.        , 671.66666667,
         673.33333333, 675.        , 676.66666667, 678.33333333,
         680.        , 681.66666667, 683.33333333, 685.        ,
         686.66666667, 688.33333333, 690.        , 691.66666667,
         693.33333333, 695.        , 696.66666667, 698.33333333,
         700.        , 701.66666667, 703.33333333, 705.        ,
         706.66666667, 708.33333333, 710.        , 711.66666667,
         713.33333333, 715.        , 716.66666667, 718.33333333,
         720.        , 721.66666667, 723.33333333, 725.        ,
         726.66666667, 728.33333333, 730.        , 731.66666667,
         733.33333333, 735.        , 736.66666667, 738.33333333,
         740.        , 741.66666667, 743.33333333, 745.        ,
         746.66666667, 748.33333333, 750.        ]),
    'power': array([[[1.21990867e-03],
          [9.08672131e-03],
          [9.01973846e-03],
          ...,
          [4.99209383e-03],
          [5.47818046e-03],
          [2.39003797e-04]],
  
         [[5.49619452e-03],
          [2.90731622e-02],
          [4.73640733e-03],
          ...,
          [1.58703045e-02],
          [1.59972107e-02],
          [1.35806479e-03]],
  
         [[5.77496866e-05],
          [1.35448052e-03],
          [6.77010934e-03],
          ...,
          [2.15950169e-02],
          [3.75167079e-03],
          [5.19217272e-07]],
  
         ...,
  
         [[7.90288901e-05],
          [8.56147209e-03],
          [1.06870895e-03],
          ...,
          [2.08861832e-03],
          [2.38530246e-03],
          [2.41693705e-02]],
  
         [[1.65273220e-03],
          [1.39098964e-02],
          [7.48902634e-03],
          ...,
          [6.75637085e-04],
          [5.25363377e-03],
          [1.94735404e-02]],
  
         [[3.01471048e-03],
          [5.68666392e-03],
          [1.27652852e-02],
          ...,
          [1.87271753e-03],
          [1.28014846e-04],
          [2.32945319e-02]]], shape=(165, 451, 1)),
    'time': array([ 0. ,  0.3,  0.6,  0.9,  1.2,  1.5,  1.8,  2.1,  2.4,  2.7,  3. ,
          3.3,  3.6,  3.9,  4.2,  4.5,  4.8,  5.1,  5.4,  5.7,  6. ,  6.3,
          6.6,  6.9,  7.2,  7.5,  7.8,  8.1,  8.4,  8.7,  9. ,  9.3,  9.6,
          9.9, 10.2, 10.5, 10.8, 11.1, 11.4, 11.7, 12. , 12.3, 12.6, 12.9,
         13.2, 13.5, 13.8, 14.1, 14.4, 14.7, 15. , 15.3, 15.6, 15.9, 16.2,
         16.5, 16.8, 17.1, 17.4, 17.7, 18. , 18.3, 18.6, 18.9, 19.2, 19.5,
         19.8, 20.1, 20.4, 20.7, 21. , 21.3, 21.6, 21.9, 22.2, 22.5, 22.8,
         23.1, 23.4, 23.7, 24. , 24.3, 24.6, 24.9, 25.2, 25.5, 25.8, 26.1,
         26.4, 26.7, 27. , 27.3, 27.6, 27.9, 28.2, 28.5, 28.8, 29.1, 29.4,
         29.7, 30. , 30.3, 30.6, 30.9, 31.2, 31.5, 31.8, 32.1, 32.4, 32.7,
         33. , 33.3, 33.6, 33.9, 34.2, 34.5, 34.8, 35.1, 35.4, 35.7, 36. ,
         36.3, 36.6, 36.9, 37.2, 37.5, 37.8, 38.1, 38.4, 38.7, 39. , 39.3,
         39.6, 39.9, 40.2, 40.5, 40.8, 41.1, 41.4, 41.7, 42. , 42.3, 42.6,
         42.9, 43.2, 43.5, 43.8, 44.1, 44.4, 44.7, 45. , 45.3, 45.6, 45.9,
         46.2, 46.5, 46.8, 47.1, 47.4, 47.7, 48. , 48.3, 48.6, 48.9, 49.2]),
  })
# ---
# name: test_spectrogram_temporal_dynamics
  dict({
    'frequencies': array([  0.        ,   1.66666667,   3.33333333,   5.        ,
           6.66666667,   8.33333333,  10.        ,  11.66666667,
          13.33333333,  15.        ,  16.66666667,  18.33333333,
          20.        ,  21.66666667,  23.33333333,  25.        ,
          26.66666667,  28.33333333,  30.        ,  31.66666667,
          33.33333333,  35.        ,  36.66666667,  38.33333333,
          40.        ,  41.66666667,  43.33333333,  45.        ,
          46.66666667,  48.33333333,  50.        ,  51.66666667,
          53.33333333,  55.        ,  56.66666667,  58.33333333,
          60.        ,  61.66666667,  63.33333333,  65.        ,
          66.66666667,  68.33333333,  70.        ,  71.66666667,
          73.33333333,  75.        ,  76.66666667,  78.33333333,
          80.        ,  81.66666667,  83.33333333,  85.        ,
          86.66666667,  88.33333333,  90.        ,  91.66666667,
          93.33333333,  95.        ,  96.66666667,  98.33333333,
         100.        , 101.66666667, 103.33333333, 105.        ,
         106.66666667, 108.33333333, 110.        , 111.66666667,
         113.33333333, 115.        , 116.66666667, 118.33333333,
         120.        , 121.66666667, 123.33333333, 125.        ,
         126.66666667, 128.33333333, 130.        , 131.66666667,
         133.33333333, 135.        , 136.66666667, 138.33333333,
         140.        , 141.66666667, 143.33333333, 145.        ,
         146.66666667, 148.33333333, 150.        , 151.66666667,
         153.33333333, 155.        , 156.66666667, 158.33333333,
         160.        , 161.66666667, 163.33333333, 165.        ,
         166.66666667, 168.33333333, 170.        , 171.66666667,
         173.33333333, 175.        , 176.66666667, 178.33333333,
         180.        , 181.66666667, 183.33333333, 185.        ,
         186.66666667, 188.33333333, 190.        , 191.66666667,
         193.33333333, 195.        , 196.66666667, 198.33333333,
         200.        , 201.66666667, 203.33333333, 205.        ,
         206.66666667, 208.33333333, 210.        , 211.66666667,
         213.33333333, 215.        , 216.66666667, 218.33333333,
         220.        , 221.66666667, 223.33333333, 225.        ,
         226.66666667, 228.33333333, 230.        , 231.66666667,
         233.33333333, 235.        , 236.66666667, 238.33333333,
         240.        , 241.66666667, 243.33333333, 245.        ,
         246.66666667, 248.33333333, 250.        , 251.66666667,
         253.33333333, 255.        , 256.66666667, 258.33333333,
         260.        , 261.66666667, 263.33333333, 265.        ,
         266.66666667, 268.33333333, 270.        , 271.66666667,
         273.33333333, 275.        , 276.66666667, 278.33333333,
         280.        , 281.66666667, 283.33333333, 285.        ,
         286.66666667, 288.33333333, 290.        , 291.66666667,
         293.33333333, 295.        , 296.66666667, 298.33333333,
         300.        , 301.66666667, 303.33333333, 305.        ,
         306.66666667, 308.33333333, 310.        , 311.66666667,
         313.33333333, 315.        , 316.66666667, 318.33333333,
         320.        , 321.66666667, 323.33333333, 325.        ,
         326.66666667, 328.33333333, 330.        , 331.66666667,
         333.33333333, 335.        , 336.66666667, 338.33333333,
         340.        , 341.66666667, 343.33333333, 345.        ,
         346.66666667, 348.33333333, 350.        , 351.66666667,
         353.33333333, 355.        , 356.66666667, 358.33333333,
         360.        , 361.66666667, 363.33333333, 365.        ,
         366.66666667, 368.33333333, 370.        , 371.66666667,
         373.33333333, 375.        , 376.66666667, 378.33333333,
         380.        , 381.66666667, 383.33333333, 385.        ,
         386.66666667, 388.33333333, 390.        , 391.66666667,
         393.33333333, 395.        , 396.66666667, 398.33333333,
         400.        , 401.66666667, 403.33333333, 405.        ,
         406.66666667, 408.33333333, 410.        , 411.66666667,
         413.33333333, 415.        , 416.66666667, 418.33333333,
         420.        , 421.66666667, 423.33333333, 425.        ,
         426.66666667, 428.33333333, 430.        , 431.66666667,
         433.33333333, 435.        , 436.66666667, 438.33333333,
         440.        , 441.66666667, 443.33333333, 445.        ,
         446.66666667, 448.33333333, 450.        , 451.66666667,
         453.33333333, 455.        , 456.66666667, 458.33333333,
         460.        , 461.66666667, 463.33333333, 465.        ,
         466.66666667, 468.33333333, 470.        , 471.66666667,
         473.33333333, 475.        , 476.66666667, 478.33333333,
         480.        , 481.66666667, 483.33333333, 485.        ,
         486.66666667, 488.33333333, 490.        , 491.66666667,
         493.33333333, 495.        , 496.66666667, 498.33333333,
         500.        , 501.66666667, 503.33333333, 505.        ,
         506.66666667, 508.33333333, 510.        , 511.66666667,
         513.33333333, 515.        , 516.66666667, 518.33333333,
         520.        , 521.66666667, 523.33333333, 525.        ,
         526.66666667, 528.33333333, 530.        , 531.66666667,
         533.33333333, 535.        , 536.66666667, 538.33333333,
         540.        , 541.66666667, 543.33333333, 545.        ,
         546.66666667, 548.33333333, 550.        , 551.66666667,
         553.33333333, 555.        , 556.66666667, 558.33333333,
         560.        , 561.66666667, 563.33333333, 565.        ,
         566.66666667, 568.33333333, 570.        , 571.66666667,
         573.33333333, 575.        , 576.66666667, 578.33333333,
         580.        , 581.66666667, 583.33333333, 585.        ,
         586.66666667, 588.33333333, 590.        , 591.66666667,
         593.33333333, 595.        , 596.66666667, 598.33333333,
         600.        , 601.66666667, 603.33333333, 605.        ,
         606.66666667, 608.33333333, 610.        , 611.66666667,
         613.33333333, 615.        , 616.66666667, 618.33333333,
         620.        , 621.66666667, 623.33333333, 625.        ,
         626.66666667, 628.33333333, 630.        , 631.66666667,
         633.33333333, 635.        , 636.66666667, 638.33333333,
         640.        , 641.66666667, 643.33333333, 645.        ,
         646.66666667, 648.33333333, 650.        , 651.66666667,
         653.33333333, 655.        , 656.66666667, 658.33333333,
         660.        , 661.66666667, 663.33333333, 665.        ,
         666.66666667, 668.33333333, 670.        , 671.66666667,
         673.33333333, 675.        , 676.66666667, 678.33333333,
         680.        , 681.66666667, 683.33333333, 685.        ,
         686.66666667, 688.33333333, 690.        , 691.66666667,
         693.33333333, 695.        , 696.66666667, 698.33333333,
         700.        , 701.66666667, 703.33333333, 705.        ,
         706.66666667, 708.33333333, 710.        , 711.66666667,
         713.33333333, 715.        , 716.66666667, 718.33333333,
         720.        , 721.66666667, 723.33333333, 725.        ,
         726.66666667, 728.33333333, 730.        , 731.66666667,
         733.33333333, 735.        , 736.66666667, 738.33333333,
         740.        , 741.66666667, 743.33333333, 745.        ,
         746.66666667, 748.33333333, 750.        ]),
    'power': array([[[0.00610899],
          [0.00474561],
          [0.00958117],
          ...,
          [0.0085188 ],
          [0.00945789],
          [0.00521029]],
  
         [[0.01221165],
          [0.01422279],
          [0.01014562],
          ...,
          [0.01566382],
          [0.01902748],
          [0.01198035]],
  
         [[0.00306756],
          [0.00501063],
          [0.00961441],
          ...,
          [0.01400232],
          [0.0141868 ],
          [0.01511134]],
  
         ...,
  
         [[0.00792652],
          [0.0066474 ],
          [0.00986341],
          ...,
          [0.01473379],
          [0.01606844],
          [0.0128477 ]],
  
         [[0.0060174 ],
          [0.00745638],
          [0.0054251 ],
          ...,
          [0.01165773],
          [0.00893399],
          [0.00467626]],
  
         [[0.01501745],
          [0.01325452],
          [0.00980892],
          ...,
          [0.01680385],
          [0.01502421],
          [0.00670942]]], shape=(165, 451, 1)),
    'time': array([ 0. ,  0.3,  0.6,  0.9,  1.2,  1.5,  1.8,  2.1,  2.4,  2.7,  3. ,
          3.3,  3.6,  3.9,  4.2,  4.5,  4.8,  5.1,  5.4,  5.7,  6. ,  6.3,
          6.6,  6.9,  7.2,  7.5,  7.8,  8.1,  8.4,  8.7,  9. ,  9.3,  9.6,
          9.9, 10.2, 10.5, 10.8, 11.1, 11.4, 11.7, 12. , 12.3, 12.6, 12.9,
         13.2, 13.5, 13.8, 14.1, 14.4, 14.7, 15. , 15.3, 15.6, 15.9, 16.2,
         16.5, 16.8, 17.1, 17.4, 17.7, 18. , 18.3, 18.6, 18.9, 19.2, 19.5,
         19.8, 20.1, 20.4, 20.7, 21. , 21.3, 21.6, 21.9, 22.2, 22.5, 22.8,
         23.1, 23.4, 23.7, 24. , 24.3, 24.6, 24.9, 25.2, 25.5, 25.8, 26.1,
         26.4, 26.7, 27. , 27.3, 27.6, 27.9, 28.2, 28.5, 28.8, 29.1, 29.4,
         29.7, 30. , 30.3, 30.6, 30.9, 31.2, 31.5, 31.8, 32.1, 32.4, 32.7,
         33. , 33.3, 33.6, 33.9, 34.2, 34.5, 34.8, 35.1, 35.4, 35.7, 36. ,
         36.3, 36.6, 36.9, 37.2, 37.5, 37.8, 38.1, 38.4, 38.7, 39. , 39.3,
         39.6, 39.9, 40.2, 40.5, 40.8, 41.1, 41.4, 41.7, 42. , 42.3, 42.6,
         42.9, 43.2, 43.5, 43.8, 44.1, 44.4, 44.7, 45. , 45.3, 45.6, 45.9,
         46.2, 46.5, 46.8, 47.1, 47.4, 47.7, 48. , 48.3, 48.6, 48.9, 49.2]),
  })
# ---
# name: test_spectrogram_with_trials
  dict({
    'frequencies': array([  0.        ,   1.66666667,   3.33333333,   5.        ,
           6.66666667,   8.33333333,  10.        ,  11.66666667,
          13.33333333,  15.        ,  16.66666667,  18.33333333,
          20.        ,  21.66666667,  23.33333333,  25.        ,
          26.66666667,  28.33333333,  30.        ,  31.66666667,
          33.33333333,  35.        ,  36.66666667,  38.33333333,
          40.        ,  41.66666667,  43.33333333,  45.        ,
          46.66666667,  48.33333333,  50.        ,  51.66666667,
          53.33333333,  55.        ,  56.66666667,  58.33333333,
          60.        ,  61.66666667,  63.33333333,  65.        ,
          66.66666667,  68.33333333,  70.        ,  71.66666667,
          73.33333333,  75.        ,  76.66666667,  78.33333333,
          80.        ,  81.66666667,  83.33333333,  85.        ,
          86.66666667,  88.33333333,  90.        ,  91.66666667,
          93.33333333,  95.        ,  96.66666667,  98.33333333,
         100.        , 101.66666667, 103.33333333, 105.        ,
         106.66666667, 108.33333333, 110.        , 111.66666667,
         113.33333333, 115.        , 116.66666667, 118.33333333,
         120.        , 121.66666667, 123.33333333, 125.        ,
         126.66666667, 128.33333333, 130.        , 131.66666667,
         133.33333333, 135.        , 136.66666667, 138.33333333,
         140.        , 141.66666667, 143.33333333, 145.        ,
         146.66666667, 148.33333333, 150.        , 151.66666667,
         153.33333333, 155.        , 156.66666667, 158.33333333,
         160.        , 161.66666667, 163.33333333, 165.        ,
         166.66666667, 168.33333333, 170.        , 171.66666667,
         173.33333333, 175.        , 176.66666667, 178.33333333,
         180.        , 181.66666667, 183.33333333, 185.        ,
         186.66666667, 188.33333333, 190.        , 191.66666667,
         193.33333333, 195.        , 196.66666667, 198.33333333,
         200.        , 201.66666667, 203.33333333, 205.        ,
         206.66666667, 208.33333333, 210.        , 211.66666667,
         213.33333333, 215.        , 216.66666667, 218.33333333,
         220.        , 221.66666667, 223.33333333, 225.        ,
         226.66666667, 228.33333333, 230.        , 231.66666667,
         233.33333333, 235.        , 236.66666667, 238.33333333,
         240.        , 241.66666667, 243.33333333, 245.        ,
         246.66666667, 248.33333333, 250.        , 251.66666667,
         253.33333333, 255.        , 256.66666667, 258.33333333,
         260.        , 261.66666667, 263.33333333, 265.        ,
         266.66666667, 268.33333333, 270.        , 271.66666667,
         273.33333333, 275.        , 276.66666667, 278.33333333,
         280.        , 281.66666667, 283.33333333, 285.        ,
         286.66666667, 288.33333333, 290.        , 291.66666667,
         293.33333333, 295.        , 296.66666667, 298.33333333,
         300.        , 301.66666667, 303.33333333, 305.        ,
         306.66666667, 308.33333333, 310.        , 311.66666667,
         313.33333333, 315.        , 316.66666667, 318.33333333,
         320.        , 321.66666667, 323.33333333, 325.        ,
         326.66666667, 328.33333333, 330.        , 331.66666667,
         333.33333333, 335.        , 336.66666667, 338.33333333,
         340.        , 341.66666667, 343.33333333, 345.        ,
         346.66666667, 348.33333333, 350.        , 351.66666667,
         353.33333333, 355.        , 356.66666667, 358.33333333,
         360.        , 361.66666667, 363.33333333, 365.        ,
         366.66666667, 368.33333333, 370.        , 371.66666667,
         373.33333333, 375.        , 376.66666667, 378.33333333,
         380.        , 381.66666667, 383.33333333, 385.        ,
         386.66666667, 388.33333333, 390.        , 391.66666667,
         393.33333333, 395.        , 396.66666667, 398.33333333,
         400.        , 401.66666667, 403.33333333, 405.        ,
         406.66666667, 408.33333333, 410.        , 411.66666667,
         413.33333333, 415.        , 416.66666667, 418.33333333,
         420.        , 421.66666667, 423.33333333, 425.        ,
         426.66666667, 428.33333333, 430.        , 431.66666667,
         433.33333333, 435.        , 436.66666667, 438.33333333,
         440.        , 441.66666667, 443.33333333, 445.        ,
         446.66666667, 448.33333333, 450.        , 451.66666667,
         453.33333333, 455.        , 456.66666667, 458.33333333,
         460.        , 461.66666667, 463.33333333, 465.        ,
         466.66666667, 468.33333333, 470.        , 471.66666667,
         473.33333333, 475.        , 476.66666667, 478.33333333,
         480.        , 481.66666667, 483.33333333, 485.        ,
         486.66666667, 488.33333333, 490.        , 491.66666667,
         493.33333333, 495.        , 496.66666667, 498.33333333,
         500.        , 501.66666667, 503.33333333, 505.        ,
         506.66666667, 508.33333333, 510.        , 511.66666667,
         513.33333333, 515.        , 516.66666667, 518.33333333,
         520.        , 521.66666667, 523.33333333, 525.        ,
         526.66666667, 528.33333333, 530.        , 531.66666667,
         533.33333333, 535.        , 536.66666667, 538.33333333,
         540.        , 541.66666667, 543.33333333, 545.        ,
         546.66666667, 548.33333333, 550.        , 551.66666667,
         553.33333333, 555.        , 556.66666667, 558.33333333,
         560.        , 561.66666667, 563.33333333, 565.        ,
         566.66666667, 568.33333333, 570.        , 571.66666667,
         573.33333333, 575.        , 576.66666667, 578.33333333,
         580.        , 581.66666667, 583.33333333, 585.        ,
         586.66666667, 588.33333333, 590.        , 591.66666667,
         593.33333333, 595.        , 596.66666667, 598.33333333,
         600.        , 601.66666667, 603.33333333, 605.        ,
         606.66666667, 608.33333333, 610.        , 611.66666667,
         613.33333333, 615.        , 616.66666667, 618.33333333,
         620.        , 621.66666667, 623.33333333, 625.        ,
         626.66666667, 628.33333333, 630.        , 631.66666667,
         633.33333333, 635.        , 636.66666667, 638.33333333,
         640.        , 641.66666667, 643.33333333, 645.        ,
         646.66666667, 648.33333333, 650.        , 651.66666667,
         653.33333333, 655.        , 656.66666667, 658.33333333,
         660.        , 661.66666667, 663.33333333, 665.        ,
         666.66666667, 668.33333333, 670.        , 671.66666667,
         673.33333333, 675.        , 676.66666667, 678.33333333,
         680.        , 681.66666667, 683.33333333, 685.        ,
         686.66666667, 688.33333333, 690.        , 691.66666667,
         693.33333333, 695.        , 696.66666667, 698.33333333,
         700.        , 701.66666667, 703.33333333, 705.        ,
         706.66666667, 708.33333333, 710.        , 711.66666667,
         713.33333333, 715.        , 716.66666667, 718.33333333,
         720.        , 721.66666667, 723.33333333, 725.        ,
         726.66666667, 728.33333333, 730.        , 731.66666667,
         733.33333333, 735.        , 736.66666667, 738.33333333,
         740.        , 741.66666667, 743.33333333, 745.        ,
         746.66666667, 748.33333333, 750.        ]),
    'power': array([[[0.00885858],
          [0.00913215],
          [0.00991245],
          ...,
          [0.01045889],
          [0.01015392],
          [0.009181  ]],
  
         [[0.0075439 ],
          [0.00710211],
          [0.00757732],
          ...,
          [0.01067422],
          [0.01216495],
          [0.0121996 ]],
  
         [[0.0084234 ],
          [0.0082764 ],
          [0.00711675],
          ...,
          [0.01100264],
          [0.01123047],
          [0.01128167]],
  
         ...,
  
         [[0.00830871],
          [0.00884636],
          [0.00845026],
          ...,
          [0.00960346],
          [0.00933141],
          [0.00908286]],
  
         [[0.00829751],
          [0.00953457],
          [0.00862646],
          ...,
          [0.01343778],
          [0.01425402],
          [0.01610962]],
  
         [[0.00866051],
          [0.00972396],
          [0.01141702],
          ...,
          [0.01249946],
          [0.01566682],
          [0.01694022]]], shape=(165, 451, 1)),
    'time': array([ 0. ,  0.3,  0.6,  0.9,  1.2,  1.5,  1.8,  2.1,  2.4,  2.7,  3. ,
          3.3,  3.6,  3.9,  4.2,  4.5,  4.8,  5.1,  5.4,  5.7,  6. ,  6.3,
          6.6,  6.9,  7.2,  7.5,  7.8,  8.1,  8.4,  8.7,  9. ,  9.3,  9.6,
          9.9, 10.2, 10.5, 10.8, 11.1, 11.4, 11.7, 12. , 12.3, 12.6, 12.9,
         13.2, 13.5, 13.8, 14.1, 14.4, 14.7, 15. , 15.3, 15.6, 15.9, 16.2,
         16.5, 16.8, 17.1, 17.4, 17.7, 18. , 18.3, 18.6, 18.9, 19.2, 19.5,
         19.8, 20.1, 20.4, 20.7, 21. , 21.3, 21.6, 21.9, 22.2, 22.5, 22.8,
         23.1, 23.4, 23.7, 24. , 24.3, 24.6, 24.9, 25.2, 25.5, 25.8, 26.1,
         26.4, 26.7, 27. , 27.3, 27.6, 27.9, 28.2, 28.5, 28.8, 29.1, 29.4,
         29.7, 30. , 30.3, 30.6, 30.9, 31.2, 31.5, 31.8, 32.1, 32.4, 32.7,
         33. , 33.3, 33.6, 33.9, 34.2, 34.5, 34.8, 35.1, 35.4, 35.7, 36. ,
         36.3, 36.6, 36.9, 37.2, 37.5, 37.8, 38.1, 38.4, 38.7, 39. , 39.3,
         39.6, 39.9, 40.2, 40.5, 40.8, 41.1, 41.4, 41.7, 42. , 42.3, 42.6,
         42.9, 43.2, 43.5, 43.8, 44.1, 44.4, 44.7, 45. , 45.3, 45.6, 45.9,
         46.2, 46.5, 46.8, 47.1, 47.4, 47.7, 48. , 48.3, 48.6, 48.9, 49.2]),
  })
# ---
# name: test_weighted_phase_lag_index
  dict({
    'frequencies': array([0.00000000e+00, 4.13223140e-01, 8.26446281e-01, ...,
         7.49173554e+02, 7.49586777e+02, 7.50000000e+02], shape=(1816,)),
    'weighted_phase_lag_index': array([[[[ 0.        ,  0.        ],
           [ 0.        ,  0.        ]],
  
          [[ 0.        ,  0.12714744],
           [-0.12714744,  0.        ]],
  
          [[ 0.        , -0.17900754],
           [ 0.17900754,  0.        ]],
  
          ...,
  
          [[ 0.        ,  0.08307   ],
           [-0.08307   ,  0.        ]],
  
          [[ 0.        , -0.11766964],
           [ 0.11766964,  0.        ]],
  
          [[ 0.        ,  0.        ],
           [ 0.        ,  0.        ]]]], shape=(1, 1816, 2, 2)),
  })
# ---
